fix text jump

--- a/services/QuillLMS/client/app/bundles/Comprehension/styles/explanationSlide.scss
+++ b/services/QuillLMS/client/app/bundles/Comprehension/styles/explanationSlide.scss
@@ -36,6 +36,7 @@
     }
     #image {
       max-width: 580px;
+      height: 312px;
     }
     .subtext {
       max-width: 496px;
@@ -117,6 +118,7 @@
       }
       #image {
         max-width: 320px;
+        height: auto;
       }
       .subtext {
         max-width: 288px;
